--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,12 @@ cache:
 
 lint:
   script:
-    - npm run lint
+    - npm run ng lint lint harpokrat
 
 test:
   script:
-    - npm test
+    - npm run ng test harpokrat
 
 build:
   script:
-    - npm run build
+    - npm run ng build harpokrat
