--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,7 @@
               "projects/example/src/assets"
             ],
             "styles": [
-              "projects/example/src/styles.css"
+              "projects/example/src/styles.scss"
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -115,7 +115,7 @@
             "tsConfig": "projects/example/tsconfig.spec.json",
             "karmaConfig": "projects/example/karma.conf.js",
             "styles": [
-              "projects/example/src/styles.css"
+              "projects/example/src/styles.scss"
             ],
             "scripts": [],
             "assets": [
