--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "lib-hpk",
+  "name": "@harpokrat/lib",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
+    "example": "ng serve example",
+    "build": "ng build harpokrat",
+    "test": "ng test harpokrat",
+    "lint": "ng lint harpokrat",
     "e2e": "ng e2e"
   },
   "private": true,
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
