--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@harpokrat/lib",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "example": "ng serve example",
     "build": "ng build harpokrat",
+    "copy-dist": "rm -rf ./dist && cp -r ./projects/harpokrat/dist ./dist",
+    "package": "npm run build && npm run copy-dist",
     "test": "ng test harpokrat",
     "lint": "ng lint harpokrat",
     "e2e": "ng e2e"
