--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
-    "@harpokrat/hcl": "^0.0.8",
+    "@harpokrat/hcl": "^0.0.14",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.4",
@@ -29,9 +29,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.0-rc.0",
-    "@angular-devkit/build-ng-packagr": "~0.901.0-rc.0",
-    "@angular/cli": "~9.1.0-rc.0",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular-devkit/build-ng-packagr": "~0.901.4",
+    "@angular/cli": "~9.1.4",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
     "@types/jasmine": "~2.8.8",
