--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@harpokrat/client": "^0.0.6",
     "@harpokrat/hcl": "^0.0.26",
-    "@harpokrat/client": "^0.0.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "ng-recaptcha": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
