--- a/projects/harpokrat/package.json
+++ b/projects/harpokrat/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@harpokrat/api",
-  "version": "0.0.20",
+  "version": "0.0.35",
   "peerDependencies": {
     "@angular/common": "^9.1.4",
-    "@angular/core": "^9.1.4"
+    "@angular/core": "^9.1.4",
+    "@harpokrat/client": "^0.0.16",
+    "@harpokrat/hcl": "^0.1.15"
   }
 }
