--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@harpokrat/hcl": "^0.1.20",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "ng-recaptcha": "^5.0.0",
+    "ng-recaptcha": "~6.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
