Update Angular to 10.1

--- a/angular.json
+++ b/angular.json
@@ -66,8 +66,7 @@
             "styles": [
               "projects/example/src/styles.scss"
             ],
-            "scripts": [],
-            "es5BrowserSupport": false
+            "scripts": []
           },
           "configurations": {
             "production": {
