--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,5 +24,5 @@ jobs:
           npm run package
       - name: Publish Package
         run: |
-          cd delivery/harpokrat
+          cd dist/harpokrat
           npm publish --registry https://npm-registry.harpokrat.net
